--- a/vite-project/src/component/Header/SearchSection/Filter/ReasultSearch/ReasultSearch.css
+++ b/vite-project/src/component/Header/SearchSection/Filter/ReasultSearch/ReasultSearch.css
@@ -1,79 +1,25 @@
-.card {
-    border: 1px solid #ddd;
-    border-radius: 8px;
-    overflow: hidden;
-    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-    background-color: #fff;
-    min-height: 100%;
-    transition: transform 0.4s ease;
-  }
-  .card:hover{
-  transform: scale(1.01);
-  box-shadow: 2px 2px 15px 4px #a19f9f
-  }
-
-  .image {
+  .image1 {
     width: 100%;
-    height: 148px;
+    height: 380px;
+    object-fit: cover;
   }
-  
-  .content {
-    padding: 10px;
-    font-size: 17px;
-    min-width: 357px;
-
-  }
-  
-  .content h3 {
-    margin: 0;
-  }
-  
-  .desc {
-    font-size: 16px;
-    color: #555;
-    margin: 5px 0;
-    text-align: center;
-    line-height: 150%;
-  }
-  
-  .footer {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-top: 10px;
-  }
-  
-  .footer button {
-    background-color: var(--main_color);
-    color: white;
-    border: none;
-    padding: 5px 10px;
-    border-radius: 4px;
-    cursor: pointer;
+  .property-image1{
+    padding-top: 20px;
   }
 
-  .con-land{
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    gap: 1.5rem;
+  .property-header1 p,
+  .property-description1,
+  .owner-info1{
+    padding: 15px;
   }
-
-  h2{
-    margin: 25px auto;
-  }
-
-  p{
-    margin: 4px 0px;
-  }
-
-  .dollers_icon{
-    width: 20px;
-    height: 20px;
-  }
-  .fullcontainer{
-    display: flex;
-    gap: 26px;
-    overflow-x: scroll;
-    overflow-y: hidden;
-    scroll-behavior: smooth;
+  
+  .contact-button1{
+     background-color: #28a745;
+     color: white;
+     padding: 12px 25px;
+     border: none;
+     border-radius: 6px;
+     font-size: 16px;
+     cursor: pointer;
+     margin: 15px;
   }
