--- a/vite-project/src/component/Header/SearchSection/SearchSection.css
+++ b/vite-project/src/component/Header/SearchSection/SearchSection.css
@@ -11,9 +11,8 @@
   .search-bar {
     display: flex;
     align-items: center;
-    background-color: #f1f5f9; /* light gray */
+    background-color: #c1c4c7; /* light gray */
     border-radius: 0.5rem;
-    padding: 0.5rem 1rem;
     width: 60%;
     max-width: 500px;
     position: relative;
@@ -25,7 +24,7 @@
     background: transparent;
     font-size: 1rem;
     outline: none;
-    padding-right: 2rem;
+    padding-left: 21px;
   }
   
   .search-icon {
@@ -37,7 +36,6 @@
   .filter-button {
     background-color: var(--main_color); /* green-900 */
     color: white;
-    padding: 0.5rem 1.5rem;
     border: none;
     border-radius: 0.375rem;
     font-size: 1rem;
