--- a/vite-project/src/component/Header/SearchSection/Filter/ReasultSearch/ReasultSearch.css
+++ b/vite-project/src/component/Header/SearchSection/Filter/ReasultSearch/ReasultSearch.css
@@ -2,6 +2,8 @@
     width: 100%;
     height: 380px;
     object-fit: cover;
+    margin-top: 40px;
+
   }
   .property-image1{
     padding-top: 20px;
