--- a/vite-project/src/component/landdetailspage/LandBookCard/LandBookCard.css
+++ b/vite-project/src/component/landdetailspage/LandBookCard/LandBookCard.css
@@ -22,10 +22,12 @@
     height: 300px;
   }
   
-  .info-card-details p {
+  .info-card-details1 p {
     font-size: 16px;
     color: #333;
+    display: flex;
     margin: 12px 0;
+    justify-content: center;
   }
   
   .info a {
@@ -37,6 +39,6 @@
     text-decoration: underline;
   }
   
-  .icon {
+  .icon1 {
     margin-right: 8px;
   }
