--- a/vite-project/src/component/Login/Login.css
+++ b/vite-project/src/component/Login/Login.css
@@ -66,6 +66,14 @@
     padding: 10px;
     align-items: center;
    }
+   
+   /* .toat{
+      width: 100%;
+      height: 60px;
+      color: black;
+      background: #c7babac7;
+      border-radius: 15px;
+     } */
 
    @media (max-width:500px){
       .welcom-container{
